# Midterm-streamlit

./: Chatbot.py  Dockerfile  Fine_tuning_Embeddings_Midterm.ipynb  RAGAS_evaluation_Midterm.ipynb  README.md  pyproject.toml  report.md  requirements.txt
pages/: Load_Documents.py  Pending_tickets.py
utils/: _admin_util.py  _graph_util.py
